# nyumbu-ci

./: .gitignore  README.md
nyumbu_server/: __main__.py  pyproject.toml  shell.nix  vm_ctl.py  workflow.py
nyumbu_server/src/nyumbu_server/: config.py  db.py  job.py  util.py  vm.py  worker.py  workflow.py
nyumbu_web/: bun.lockb  package.json  tsconfig.json
nyumbu_web/src/: App.tsx  api.ts  global.scss
nyumbu_web/src/pages/: Environment.tsx  Page.tsx  Run.tsx  RunExpanded.tsx  RunStatus.tsx  Runs.tsx  StaticResources.tsx  WorkflowList.tsx  info.tsx  workflow.module.css  workflow.module.scss  workflow.tsx
